# rust-elo-multiplayer

./: Cargo.toml  README.md
benches/: elo.rs
src/: lib.rs
