[package]
name = "elo-multiplayer"
version = "0.1.3"
edition = "2021"
description = "Calculate ELO with multiple players"
repository = "https://github.com/mattiasmucherie/rust_tutorial"
homepage = "https://github.com/mattiasmucherie/rust_tutorial"
authors = ["Mattias Mucherie"]
license = "MIT"
keywords = ["elo", "multiplayer"]
[dependencies]
