[package]
name = "elo-multiplayer"
version = "0.1.6"
edition = "2021"
description = "Calculate ELO with multiple players"
repository = "https://github.com/mattiasmucherie/rust-elo-multiplayer"
homepage = "https://github.com/mattiasmucherie/rust-elo-multiplayer"
authors = ["Mattias Mucherie"]
license = "MIT"
keywords = ["elo", "multiplayer"]
[dependencies]
